<resources>
    <string name="app_name">Remote Manager</string>
    <string name="app_description">Remote Manager for Android</string>
    <string name="app_short_name">Remote Manager</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_contributors">License</string>
    <string name="remotes">Remotes</string>
    <string name="settings">Settings</string>
    <string name="import_rclone_config">Import config</string>
    <string name="export_rclone_config">Export config</string>
    <string name="about">About</string>
    <string name="sort">Sort</string>
    <string name="select_all">Select all</string>
    <string name="serve">Serve…</string>
    <string name="download">Download</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="app_version">App Version</string>
    <string name="rclone_version">Rclone Version</string>
    <string name="changelog">Changelog</string>
    <string name="license_and_contributors">License and Contributors</string>
    <string name="credits_libraries">Libraries and Credits</string>
    <string name="star_on_github">Star on GitHub</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="author">Original Author</string>
    <string name="author_name" translatable="false">Patryk Kaczmarkiewicz &lt;github.com/patrykcoding&gt;</string>
    <string name="follow_on_github">Follow on GitHub</string>
    <string name="maintainer">Maintainer</string>
    <string name="maintainer_name" translatable="false">Pawan Washudev &lt;github.com/pawanwashudev-official&gt;</string>
    <string name="old_maintainer">Previous Maintainers</string>
    <string name="old_maintainer_name" translatable="false">Felix Nüsse, x0b, Patryk Kaczmarkiewicz</string>
    <string name="empty_folder">The folder is empty</string>
    <string name="ooops">Ooops!</string>
    <string name="no_config_found">No configuration found, please import or add remote</string>
    <string name="import_configuration">Import configuration</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="file_icon">File icon</string>
    <string name="interpunct">•</string>
    <string name="remote_icon">Remote Icon</string>
    <string name="new_folder">New Folder</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="app_icon">App Icon</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="pref_thumbnail_cache_budget_title">Total Thumbnail Cache Size</string>
    <string name="pref_thumbnail_cache_budget_summary">Maximum storage limit for cached thumbnails (auto-cleaned when reached)</string>
    <string name="pref_clear_thumbnail_cache_title">Clear Thumbnail Cache</string>
    <string name="pref_clear_thumbnail_cache_summary">Delete all cached thumbnails to free up storage</string>
    <string name="thumbnail_cache_cleared">Thumbnail cache cleared successfully</string>
    <string name="github_app_url" translatable="false">https://github.com/neubofy/Remote-Manager</string>
    <string name="github_issue_url" translatable="false">https://github.com/neubofy/Remote-Manager/issues/new</string>
    <string name="github_author_url" translatable="false">https://github.com/pawanwashudev-official</string>
    <string name="github_maintainer_url" translatable="false">https://github.com/pawanwashudev-official</string>
    <string name="replace_config_file_question">Replace the current configuration file?</string>
    <string name="config_file_lost_statement">Your current configuration will be lost</string>
    <string name="continue_statement">Continue</string>
    <string name="worker_download_complete">Download complete</string>
    <string name="streaming_service_notification_title">Streaming Service</string>
    <string name="streaming_service_notification_content">Serving on http://127.0.0.1:%1$d</string>
    <string name="streaming_service_notification_channel_description">Streaming service</string>
    <string name="streaming_task_failed">Could not stream file</string>
    <string name="rcd_service_notification_channel_description">Background Service</string>
    <string name="worker_upload_complete">Upload complete</string>
    <string name="remotes_toolbar_title">Remotes</string>
    <string name="fab_upload_files">Upload Files</string>
    <string name="fab_new_folder">New Folder</string>
    <string name="okay_confirmation">Okay</string>
    <string name="selected">selected</string>
    <string name="rename_file">Rename a file</string>
    <string name="type_new_file_name">Enter a new file name</string>
    <string name="select_destination">Select destination</string>
    <string name="create_new_folder">Create a folder</string>
    <string name="hint_new_folder">Foldername</string>
    <string name="type_new_folder_name">Enter a new folder name</string>
    <string name="loading_file">Loading file</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">OK</string>
    <string name="file_renamed_success">File Renamed</string>
    <string name="make_directory_success">New folder created</string>
    <string name="error_getting_dir_content">Error retrieving directory contents</string>
    <string name="error_getting_remotes">Failed to retrieve remotes</string>
    <string name="error_mkdir">Error creating directory</string>
    <string name="error_moving_file">File move error</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_date_modified">By modification date</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="filename">Filename</string>
    <string name="modified_time">Modification time</string>
    <string name="size">Size</string>
    <string name="md5" translatable="false">MD5</string>
    <string name="sha1" translatable="false">SHA1</string>
    <string name="tap_to_calculate">Tap to calculate</string>
    <string name="calculating">Calculating..</string>
    <string name="hash_error">ERROR</string>
    <string name="hash_unsupported">UNSUPPORTED</string>
    <string name="hash_copied_confirmation">Hash copied to clipboard</string>
    <string name="copying_rclone_config">Copying rclone configuration</string>
    <string name="copying_rclone_config_fail">Failed to copy rclone configuration</string>
    <string name="import_configuration_fail_rclone">Failed to import. Your rclone.conf is not valid!</string>
    <string name="import_configuration_fail_zip_json_missing">Failed to import. Your Zip does not contain Triggers and Tasks!</string>
    <string name="import_configuration_fail_zip_conf_missing">Failed to import. Your Zip does not contain rclone.conf!</string>
    <string name="config_password_protected">Configuration file is password protected</string>
    <string name="please_enter_password">Enter your password</string>
    <string name="working">Working</string>
    <string name="error_unlocking_config">Error unlocking configuration</string>
    <string name="locked_configuration_password">Locked configuration password</string>
    <string name="configuration_is_password_protected">Configuration is password protected</string>
    <string name="press_to_unlock">Press to unlock</string>
    <string name="worker_download_failed">Download failed</string>
    <string name="worker_upload_failed">Upload failed</string>
    <string name="properties">Properties</string>
    <string name="open_as">Open as</string>
    <string name="open_as_text">Text</string>
    <string name="open_as_audio">Audio</string>
    <string name="open_as_video">Video</string>
    <string name="open_as_image">Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="restart_required">App restart is required</string>
    <string name="app_icon_made_by">App icon made by</string>
    <string name="pref_use_proxy_title">Use Proxy</string>
    <string name="pref_use_proxy_summary">Use proxy for all supported data transfers (HTTP, HTTPS)</string>
    <string name="pref_proxy_protocol_dlg_title">Select Protocol</string>
    <string name="pref_proxy_host_dlg_title">Enter Proxy IP or domain</string>
    <string name="pref_proxy_port_dlg_title">Enter Proxy port</string>
    <string name="pref_locale">Language</string>
    <string name="shared_preferences_allow_sync_trigger_while_idle" translatable="false">shared_preferences_allow_sync_trigger_while_idle</string>
    <string name="show_thumbnails">Show thumbnails</string>
    <string name="pref_thumbnails_dlg_title">Size limit (MB)</string>
    <string name="app_shortcuts_settings">Application Shortcuts</string>
    <string name="alarm_while_idle">Allow tasks to run when the device is idle</string>
    <string name="alarm_while_idle_summary">May consume more battery, but disabled can cause heavy delays.</string>
    <string name="preference_category_header_thumbnails">Thumbnails</string>
    <string name="preference_category_header_proxy">Proxy</string>
    <string name="preference_category_header_background_work">Background Work</string>
    <string name="pref_proxy_user">Username</string>
    <string name="pref_proxy_password">Password</string>
    <string name="preference_category_header_telemetry_cache">Remote Metadata &amp; Telemetry Cache</string>
    <string name="pref_key_enable_telemetry_cache" translatable="false">pref_key_enable_telemetry_cache</string>
    <string name="pref_enable_telemetry_cache_title">Cache Storage Quotas &amp; Directory Listings</string>
    <string name="pref_enable_telemetry_cache_summary">Saves remote storage telemetry and directory listings locally so remotes load instantly, even on low internet or app restart</string>
    <string name="pref_key_telemetry_cache_budget" translatable="false">pref_key_telemetry_cache_budget</string>
    <string name="pref_telemetry_cache_budget_title">Cache Budget Limit</string>
    <string name="pref_telemetry_cache_budget_summary">Max storage limit for directory listings: %1$.1f MB</string>
    <string name="pref_key_clear_telemetry_cache" translatable="false">pref_key_clear_telemetry_cache</string>
    <string name="pref_clear_telemetry_cache_title">Clear Remote Telemetry &amp; Metadata Cache</string>
    <string name="pref_clear_telemetry_cache_summary">Purge all locally cached remote storage quotas and folder metadata</string>
    <string name="preference_category_header_default_openers">Default File Openers</string>
    <string name="pref_key_default_image_opener" translatable="false">pref_key_default_image_opener</string>
    <string name="pref_default_image_opener_title">Image Opener</string>
    <string name="pref_key_default_video_opener" translatable="false">pref_key_default_video_opener</string>
    <string name="pref_default_video_opener_title">Video Opener</string>
    <string name="pref_key_default_audio_opener" translatable="false">pref_key_default_audio_opener</string>
    <string name="pref_default_audio_opener_title">Audio Opener</string>
    <string name="pref_key_default_doc_opener" translatable="false">pref_key_default_doc_opener</string>
    <string name="pref_default_doc_opener_title">Document &amp; PDF Opener</string>
    <string name="pref_key_reset_default_openers" translatable="false">pref_key_reset_default_openers</string>
    <string name="pref_reset_default_openers_title">Reset Default Openers</string>
    <string name="pref_reset_default_openers_summary">Revert all file categories to ask every time</string>
    <string name="default_opener_ask_every_time">Always ask (Chooser menu)</string>
</resources>