<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="AppShortcutTempKey"
        android:title="@string/app_shortcuts_settings"
        app:summary="Select shortcuts that you can pin on your homescreen" />

    <Preference
        android:key="languagePickerTempKey"
        android:title="@string/pref_locale"
        app:summary="%s" />

    <PreferenceCategory app:title="@string/preference_category_header_thumbnails">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_key_show_thumbnails"
            app:title="@string/show_thumbnails" />

        <de.felixnuesse.extract.settings.preferences.FilesizePreference
            android:defaultValue="26214400"
            android:key="@string/pref_key_thumbnail_size_limit"
            android:title="@string/pref_thumbnails_dlg_title"
            app:dependency="@string/pref_key_show_thumbnails" />

        <de.felixnuesse.extract.settings.preferences.FilesizePreference
            android:defaultValue="104857600"
            android:key="@string/pref_key_thumbnail_cache_budget"
            android:title="@string/pref_thumbnail_cache_budget_title"
            app:dependency="@string/pref_key_show_thumbnails"
            app:summary="@string/pref_thumbnail_cache_budget_summary" />

        <Preference
            android:key="@string/pref_key_clear_thumbnail_cache"
            android:title="@string/pref_clear_thumbnail_cache_title"
            app:dependency="@string/pref_key_show_thumbnails"
            app:summary="@string/pref_clear_thumbnail_cache_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_header_telemetry_cache">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_key_enable_telemetry_cache"
            app:summary="@string/pref_enable_telemetry_cache_summary"
            app:title="@string/pref_enable_telemetry_cache_title" />

        <de.felixnuesse.extract.settings.preferences.FilesizePreference
            android:defaultValue="52428800"
            android:key="@string/pref_key_telemetry_cache_budget"
            android:title="@string/pref_telemetry_cache_budget_title"
            app:dependency="@string/pref_key_enable_telemetry_cache"
            app:summary="@string/pref_telemetry_cache_budget_summary" />

        <Preference
            android:key="@string/pref_key_clear_telemetry_cache"
            android:title="@string/pref_clear_telemetry_cache_title"
            app:dependency="@string/pref_key_enable_telemetry_cache"
            app:summary="@string/pref_clear_telemetry_cache_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_header_default_openers">
        <Preference
            android:key="@string/pref_key_default_image_opener"
            android:title="@string/pref_default_image_opener_title"
            app:summary="@string/default_opener_ask_every_time" />

        <Preference
            android:key="@string/pref_key_default_video_opener"
            android:title="@string/pref_default_video_opener_title"
            app:summary="@string/default_opener_ask_every_time" />

        <Preference
            android:key="@string/pref_key_default_audio_opener"
            android:title="@string/pref_default_audio_opener_title"
            app:summary="@string/default_opener_ask_every_time" />

        <Preference
            android:key="@string/pref_key_default_doc_opener"
            android:title="@string/pref_default_doc_opener_title"
            app:summary="@string/default_opener_ask_every_time" />

        <Preference
            android:key="@string/pref_key_reset_default_openers"
            android:title="@string/pref_reset_default_openers_title"
            app:summary="@string/pref_reset_default_openers_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_header_background_work">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/shared_preferences_allow_sync_trigger_while_idle"
            android:title="@string/alarm_while_idle"
            app:summary="@string/alarm_while_idle_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_header_proxy">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_use_proxy"
            android:title="@string/pref_use_proxy_title"
            app:summary="@string/pref_use_proxy_summary" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/proxy_protocols"
            android:entryValues="@array/proxy_protocols"
            android:key="@string/pref_key_proxy_protocol"
            android:summary="Protocol: %s"
            android:title="@string/pref_proxy_protocol_dlg_title"
            app:dependency="@string/pref_key_use_proxy" />

        <EditTextPreference
            android:defaultValue="example.com"
            android:key="@string/pref_key_proxy_host"
            android:title="@string/pref_proxy_host_dlg_title"
            app:dependency="@string/pref_key_use_proxy"
            app:useSimpleSummaryProvider="true" />


        <de.felixnuesse.extract.settings.preferences.EditIntPreference
            android:inputType="number"
            android:key="@string/pref_key_proxy_port"
            android:numeric="integer"
            android:title="@string/pref_proxy_port_dlg_title"
            app:defaultValue="8080"
            app:dependency="@string/pref_key_use_proxy"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/pref_key_proxy_username"
            android:title="@string/pref_proxy_user"
            app:dependency="@string/pref_key_use_proxy"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/pref_key_proxy_password"
            android:title="@string/pref_proxy_password"
            app:dependency="@string/pref_key_use_proxy"
            android:inputType="textPassword"
            android:password="true"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>